--- a/HW2/CherryHillMap.html
+++ b/HW2/CherryHillMap.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Homework 2</h1>
-    <h3>Ari Kauftheil
-        GEOG 370-007
-        31 August 2022</h3>
-    <img src="./Images/Cherry Hill Map.png" alt="Map of East Cherry Hill, NJ" width="500px"> 
+    <h4>Ari Kauftheil<h4>
+    <h4>GEOG 370-007<h4>
+    <h4>31 August 2022</h4>
+    <img src="./Images/Cherry Hill Map.png" alt="Map of East Cherry Hill, NJ" width="600px"> 
 </body>
 </html>
