--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Course Projects</h1>
-  <a href="./HW2/CherryHillMap.html">Homework 2</a>
+  <a href="./HW2/CherryHillMap.html">Homework 2</a> <br>
   <a href="./HW3/worldprojections.html">Homework 3</a>
 </body>
 </html>
