--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>GEOG 370</title>
 </head>
 <body>
-  <h1>Course Projects</h1>
+  <h4>Ari Kauftheil</h4>
+    <h1>GEOG 370 Course Projects</h1>
   <a href="./HW2/CherryHillMap.html">Homework 2</a> <br>
   <a href="./HW3/worldprojections.html">Homework 3</a>
 </body>
