--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -21,13 +21,14 @@
     <a href="./ExampleMaps/54043.png">
     <img src="./ExampleMaps/54043.png" alt="Aitoff" width='500px'>
     </a>
+
     <h2 style="color:red">Now, you should <u>add the following projections on your own:</u></h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, and two additional projections that you choose.</h3>
     
-    <h2>Aitoff Projection</h2>
+    <h2>Pseudo-Mercator Projection</h2>
     <h3>Some observations</h3>
-    <a href="./ExampleMaps/54043.png">
-    <img src="./ExampleMaps/54043.png" alt="Aitoff" width='500px'>
+    <a href="./MyMaps/3857.png">
+    <img src="./MyMaps/3857.png" alt="Pseudo-Mercator" width='500px'>
     </a>
 
     <p></p>
