--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -30,6 +30,11 @@
     <a href="./MyMaps/3857.png">
     <img src="./MyMaps/3857.png" alt="Pseudo-Mercator" width='500px'>
     </a>
+    <h2>Sphere Winkel I</h2>
+    <h3>Some observations</h3>
+    <a href="./MyMaps/53018.png">
+    <img src="./MyMaps/53018.png" alt="Sphere Winkel I" width='500px'>
+    </a>
 
     <p></p>
     <h2>Data used for this project</h2>
