--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -28,12 +28,17 @@
     <h2>Pseudo-Mercator Projection</h2>
     <h3>Some observations</h3>
     <a href="./MyMaps/3857.png">
-    <img src="./MyMaps/3857.png" alt="Pseudo-Mercator" width='500px'>
+    <img src="./MyMaps/3857.png" alt="Pseudo-Mercator" width='600px'>
     </a>
-    <h2>Sphere Winkel I</h2>
+    <h2>Winkel I</h2>
     <h3>Some observations</h3>
     <a href="./MyMaps/53018.png">
-    <img src="./MyMaps/53018.png" alt="Sphere Winkel I" width='500px'>
+    <img src="./MyMaps/53018.png" alt="Winkel I" width='500px'>
+    </a>
+    <h2>Equal Area Cylindrical</h2>
+    <h3>Some observations</h3>
+    <a href="./MyMaps/53034.png">
+    <img src="./MyMaps/53034.png" alt="Equal Area Cylindrical" width='500px'>
     </a>
 
     <p></p>
