--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -37,9 +37,15 @@
     </a>
     <h2>Equal Area Cylindrical</h2>
     <h3>Some observations</h3>
-    <a href="./MyMaps/53034.png">
-    <img src="./MyMaps/53034.png" alt="Equal Area Cylindrical" width='500px'>
+    <a href="./MyMaps/54034.png">
+    <img src="./MyMaps/54034.png" alt="Equal Area Cylindrical" width='500px'>
     </a>
+    <h2>World Equidistant Conic</h2>
+    <h3>Some observations</h3>
+    <a href="./MyMaps/54027.png">
+    <img src="./MyMaps/54027.png" alt="World Equidistant Conic" width='500px'>
+    </a>
+    
 
     <p></p>
     <h2>Data used for this project</h2>
