--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -45,8 +45,12 @@
     <a href="./MyMaps/54027.png">
     <img src="./MyMaps/54027.png" alt="World Equidistant Conic" width='500px'>
     </a>
+    <h2>North Pole Azimuthal</h2>
+    <h3>Some observations</h3>
+    <a href="./MyMaps/102016.png">
+    <img src="./MyMaps/102016.png" alt="North Pole Azimuthal Equidistant" width='500px'>
+    </a>
     
-
     <p></p>
     <h2>Data used for this project</h2>
     <a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natrual Earth 1:10m Cultural Vector </a>
