--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -30,25 +30,35 @@
     <a href="./MyMaps/3857.png">
     <img src="./MyMaps/3857.png" alt="Pseudo-Mercator" width='600px'>
     </a>
-    <h2>Winkel I</h2>
+    <h2>Winkel I Projection</h2>
     <h3>Some observations</h3>
     <a href="./MyMaps/53018.png">
-    <img src="./MyMaps/53018.png" alt="Winkel I" width='500px'>
+    <img src="./MyMaps/53018.png" alt="Winkel I" width='600px'>
     </a>
-    <h2>Equal Area Cylindrical</h2>
+    <h2>Equal Area Cylindrical Projection</h2>
     <h3>Some observations</h3>
     <a href="./MyMaps/54034.png">
-    <img src="./MyMaps/54034.png" alt="Equal Area Cylindrical" width='500px'>
+    <img src="./MyMaps/54034.png" alt="Equal Area Cylindrical" width='600px'>
     </a>
-    <h2>World Equidistant Conic</h2>
+    <h2>World Equidistant Conic Projection</h2>
     <h3>Some observations</h3>
     <a href="./MyMaps/54027.png">
-    <img src="./MyMaps/54027.png" alt="World Equidistant Conic" width='500px'>
+    <img src="./MyMaps/54027.png" alt="World Equidistant Conic" width='600px'>
     </a>
-    <h2>North Pole Azimuthal</h2>
+    <h2>North Pole Azimuthal Projection</h2>
     <h3>Some observations</h3>
     <a href="./MyMaps/102016.png">
-    <img src="./MyMaps/102016.png" alt="North Pole Azimuthal Equidistant" width='500px'>
+    <img src="./MyMaps/102016.png" alt="North Pole Azimuthal Equidistant" width='600px'>
+    </a>
+    <h2>South Pole Azimuthal Projection</h2>
+    <h3>Some observations</h3>
+    <a href="./MyMaps/102019.png">
+    <img src="./MyMaps/102019.png" alt="South Pole Azimuthal Equidistant" width='600px'>
+    </a>
+    <h2>Goode Homolosine Projection</h2>
+    <h3>Some observations</h3>
+    <a href="./MyMaps/54052.png">
+    <img src="./MyMaps/54052.png" alt="Goode Homolosine" width='600px'>
     </a>
     
     <p></p>
