--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -6,7 +6,7 @@
     <title>Homework 3: World Projections</title>
 </head>
 <body>
-    <h5>Ari Kauftheil</h5>
+    <p>Ari Kauftheil</p>
     <h1>Homeowork 3: World Projection Maps</h1>
     
     <h2 style="color:red">How I displayed the map in different projections using QGIS</h2>
@@ -17,13 +17,11 @@
     
     <h2 style="color:red">Example Maps</h2>
     <h2>WGS84 Projection</h2>
-    <h3>Some observations</h3>
     <p>Neither shape, nor area is conserved, but the map is pretty accurate around the equator. The poles are most distorted with extra large areas and vertically squished shapes.</p>
     <a href="./ExampleMaps/4326.png">
     <img src="./ExampleMaps/4326.png" alt="WGS84" width='500px'>
     </a>
     <h2>Aitoff Projection</h2>
-    <h3>Some observations</h3>
     <p>Neither shape, nor area is conserved, with distortion increasing out from the equator and prime meridian. The map emulates the curvature of the earth pretty well and it doesn't look too distorted visually.</p>
     <a href="./ExampleMaps/54043.png">
     <img src="./ExampleMaps/54043.png" alt="Aitoff" width='500px'>
@@ -32,43 +30,36 @@
     <h2 style="color:red">My Maps</h2>
     <h3>EPSG: 3857, 53018, 54034, 54027, 102016, 102019, and 54052.</h3>
     <h2>Pseudo-Mercator Projection</h2>
-    <h3>Some observations</h3>
     <p>Shape is conserved, while area is not. The equator is most accurate and continents are represented larger toward the poles.</p>
     <a href="./MyMaps/3857.png">
     <img src="./MyMaps/3857.png" alt="Pseudo-Mercator" width='600px'>
     </a>
     <h2>Winkel I Projection</h2>
-    <h3>Some observations</h3>
     <p>Neither shape nor area is conserved. This map also tries mimic the curvature of the earth and distortion increases away from the prime meridian and equator.</p>
     <a href="./MyMaps/53018.png">
     <img src="./MyMaps/53018.png" alt="Winkel I" width='600px'>
     </a>
     <h2>Equal Area Cylindrical Projection</h2>
-    <h3>Some observations</h3>
     <p>Area is conserved, while shape is not. Shape is most accurate at the equator and continents become vertically squished toward the poles.</p>
     <a href="./MyMaps/54034.png">
     <img src="./MyMaps/54034.png" alt="Equal Area Cylindrical" width='600px'>
     </a>
     <h2>World Equidistant Conic Projection</h2>
-    <h3>Some observations</h3>
     <p>Neither shape nor area is conserved, but distance to points on the map from the North Pole looks to be conserved. The Arctic is really well represented, but area increaes towards the south and continents are stretched horizontally. </p>
     <a href="./MyMaps/54027.png">
     <img src="./MyMaps/54027.png" alt="World Equidistant Conic" width='600px'>
     </a>
     <h2>North Pole Azimuthal Projection</h2>
-    <h3>Some observations</h3>
     <p>Mostly the same conservation and distortion properties as the equidistant conic projection. The arctic is represented a little differently, with the distance between Alaska and the east coast of Russia more accurately displayed (I think, at least they are closer). The oceans also seem more stretched longitudinally.</p>
     <a href="./MyMaps/102016.png">
     <img src="./MyMaps/102016.png" alt="North Pole Azimuthal Equidistant" width='600px'>
     </a>
     <h2>South Pole Azimuthal Projection</h2>
-    <h3>Some observations</h3>
     <p>Neither shape nor area is conserved, but distance to points on the map from the South Pole are conserved. Antartica is most accurately represented, but it feels unusual to look at the world "upside down". It is a really interesting perspective shift. The continents increase in area and are stretched longitudinally towards the north.</p>
     <a href="./MyMaps/102019.png">
     <img src="./MyMaps/102019.png" alt="South Pole Azimuthal Equidistant" width='600px'>
     </a>
     <h2>Goode Homolosine Projection</h2>
-    <h3>Some observations</h3>
     <p>Shape and area are very well (but not completely) conserved over the continents. The oceans are stretched and kind of split. Greenland has quite a large horizontal stretch, rather than being cut into two pieces. Antarctica too is greatly distorted.</p>
     <a href="./MyMaps/54052.png">
     <img src="./MyMaps/54052.png" alt="Goode Homolosine" width='600px'>
