--- a/HW3/worldprojections.html
+++ b/HW3/worldprojections.html
@@ -65,10 +65,10 @@
     <img src="./MyMaps/54052.png" alt="Goode Homolosine" width='600px'>
     </a>
     
-    <p></p>
+    
     <h2>Data used for this project</h2>
-    <a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natural Earth 1:10m Cultural Vector </a>
-    <p>I used this website to find interesting projection types for the projections I chose myself:</p>
+    <p><a href="https://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/cultural/ne_10m_admin_0_countries.zip"> Download Natural Earth 1:10m Cultural Vector </a></p>
+    ><p>I used the following website to find interesting projection types for the projections I got to choose myself:</p>
     <a href="https://futuremaps.com/blogs/news/top-10-world-map-projections"> The Future Mapping Company </a>
 </body>
 </html>
