--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h4>Ari Kauftheil</h4>
     <h1>GEOG 370 Course Projects</h1>
   <a href="./HW2/CherryHillMap.html">Homework 2</a> <br>
-  <a href="./HW3/worldprojections.html">Homework 3</a>
+  <a href="./HW3/worldprojections.html">Homework 3</a> <br>
+  <a href="./HW4/unc_topography_tile.html">Homework 3</a>
 </body>
 </html>
