--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="./HW2/CherryHillMap.html">Homework 2</a> <br>
   <a href="./HW3/worldprojections.html">Homework 3</a> <br>
   <a href="./HW4/unc_topography_tile.html">Homework 4</a> <br>
-  <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5</a>
+  <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5</a> <br>
+  <a href="./HW6/Texas_Something_Choropleth.html">Homework 5</a>
 </body>
 </html>
