--- a/HW6/Texas_Something_Choropleth.html
+++ b/HW6/Texas_Something_Choropleth.html
@@ -18,7 +18,7 @@
 <h2>Data used for this project</h2>
     <a href="yourdata.csv"> CSV dataset </a>
     <p></p>
-    <a href="./Data/Texas_Counties.geojson"> Link to vector file (Texas Counties) </a>
+    <a href="https://github.com/arisk492/GEOG-370/blob/main/HW6/Data/Texas_Counties.geojson"> Link to vector file (Texas Counties) </a>
 
 </body>
 </html>
