--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <a href="./HW3/worldprojections.html">Homework 3</a> <br>
   <a href="./HW4/unc_topography_tile.html">Homework 4</a> <br>
   <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5</a> <br>
-  <a href="./HW6/Texas_Something_Choropleth.html">Homework 6</a>
+  <a href="https://github.com/arisk492/GEOG-370/blob/main/HW6/Data/Texas_Counties.geojson">Homework 6</a>
 </body>
 </html>
