--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <h4>Ari Kauftheil</h4>
     <h1>GEOG 370 Course Projects</h1>
-  <a href="./HW2/CherryHillMap.html">Homework 2</a> <br>
-  <a href="./HW3/worldprojections.html">Homework 3</a> <br>
-  <a href="./HW4/unc_topography_tile.html">Homework 4</a> <br>
-  <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5</a> <br>
-  <a href="https://github.com/arisk492/GEOG-370/blob/main/HW6/Data/Texas_Counties.geojson">Homework 6</a>
+  <a href="./HW2/CherryHillMap.html">Homework 2 - Cherry Hill Map</a> <br>
+  <a href="./HW3/worldprojections.html">Homework 3 - World Projects</a> <br>
+  <a href="./HW4/unc_topography_tile.html">Homework 4 - UNC Topography Tile</a> <br>
+  <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5 - Pittsboro 1965 Tile</a> <br>
+  <a href="./HW6/Texas_Something_Choropleth.html">Homework 6 - Census Data Choropleth</a>
 </body>
 </html>
