--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h4>Ari Kauftheil</h4>
     <h1>GEOG 370 Course Projects</h1>
   <a href="./HW2/CherryHillMap.html">Homework 2 - Cherry Hill Map</a> <br>
-  <a href="./HW3/worldprojections.html">Homework 3 - World Projects</a> <br>
+  <a href="./HW3/worldprojections.html">Homework 3 - World Projections</a> <br>
   <a href="./HW4/unc_topography_tile.html">Homework 4 - UNC Topography Tile</a> <br>
   <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5 - Pittsboro 1965 Tile</a> <br>
   <a href="./HW6/Texas_Grandparents_Choropleth.html">Homework 6 - Census Data Choropleth</a>
