--- a/HW6/Texas_Grandparents_Choropleth.html
+++ b/HW6/Texas_Grandparents_Choropleth.html
@@ -11,12 +11,12 @@
 <h3>Description of your map</h3>
 <!-- Your map goes here -->
 <a href="./Texas_Grandparents_Choropleth.png">
-    <img src="./Texas_Grandparents_Choropleth.png" alt="Number of grandparent householders responsible for their grandchildren by county choropleth" width='500px'>
+    <img src="./Texas_Grandparents_Choropleth.png" alt="Number of grandparent householders responsible for their grandchildren by county choropleth" width='600px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="./Data/Texas_Grandparents_2020_Data.csv"> CSV dataset (Grandparent Householders Data) </a>
+    <a href="https://github.com/arisk492/GEOG-370/blob/main/HW6/Data/Texas_Grandparents_2020_Data.csv"> CSV dataset (Grandparent Householders Data) </a>
     <p></p>
     <a href="https://github.com/arisk492/GEOG-370/blob/main/HW6/Data/Texas_Counties.geojson"> Link to vector file (Texas Counties) </a>
 
