--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <a href="./HW3/worldprojections.html">Homework 3 - World Projections</a> <br>
   <a href="./HW4/unc_topography_tile.html">Homework 4 - UNC Topography Tile</a> <br>
   <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5 - Pittsboro 1965 Tile</a> <br>
-  <a href="./HW6/Texas_Grandparents_Choropleth.html">Homework 6 - Census Data Choropleth</a>
+  <a href="./HW6/Texas_Grandparents_Choropleth.html">Homework 6.1 - Census Data Choropleth</a> <br>
+  <a href="./HW6/Part2_Ratio_Chorpleths.html">Homework 6.2 - Census Data Ratios and Classifications</a>
 </body>
 </html>
