--- a/HW7/US_Energy_CO2_Emissions.html
+++ b/HW7/US_Energy_CO2_Emissions.html
@@ -25,7 +25,9 @@ I chose this topic because I was interested in learning about which parts of the
     <img src="./Percent Change CO2 Emissions.png" alt="Percent Change in Per Capita CO2 Emissions" width='600px'>
     </a>
 
-<h4>I did not use any additional data for this section.</h4>
-
+<h3>Data</h3>
+<p><strong>GeoJSON:</strong>https://github.com/arisk492/GEOG-370/blob/main/HW7/Continental_US_States.geojson</p>
+<p><strong>Data Source:<strong>https://www.eia.gov/environment/emissions/state/</p>
+<a href="./Energy_Related_CO2_Emissions_by_State"><p><strong>Clean CSV</strong></p></a>
 </body>
 </html>
