--- a/HW7/US_Energy_CO2_Emissions.html
+++ b/HW7/US_Energy_CO2_Emissions.html
@@ -12,7 +12,8 @@
 <p>For this assignment I looked into carbon dioxide emissions in the United States and ended up making two choropleths. 
     The first choropleth shows carbon dioxide emissions per capita from energy production in each U.S. state.
 The second choropleth shows the percent change in per capita carbon dioxide emissions from energy production from 1970 to 2019. 
-I chose this topic because I was interested in learning about which parts of the U.S. have cleaner energy economies.</p>
+I chose this topic because I was interested in learning about which parts of the U.S. have cleaner energy economies. 
+From the choropleths it seems that central U.S. states have seen in increase in per capita CO2 emissions from energy (like coal and natural gas) over the last 50 years and are currently leading this category.</p>
 <!-- Your map goes here -->
 
 <h3>2019 Per Capita CO2 Emissions</h3>
