--- a/HW7/US_Energy_CO2_Emissions.html
+++ b/HW7/US_Energy_CO2_Emissions.html
@@ -16,19 +16,22 @@ I chose this topic because I was interested in learning about which parts of the
 From the choropleths it seems that central U.S. states have seen in increase in per capita CO2 emissions from energy (like coal and natural gas) over the last 50 years and are currently leading this category.</p>
 <!-- Your map goes here -->
 
+<br>
 <h3>2019 Per Capita CO2 Emissions</h3>
 <a href="./2019 CO2 Emissions.png">
     <img src="./2019 CO2 Emissions.png" alt="2019 Per Capita CO2 Emissions" width='600px'>
     </a>
 
+<br>
 <h3>1970-2019 Percent Change</h3>
 <a href="./Percent Change CO2 Emissions.png">
     <img src="./Percent Change CO2 Emissions.png" alt="Percent Change in Per Capita CO2 Emissions" width='600px'>
     </a>
 
+<br>    
 <h3>Data</h3>
-<p><strong>GeoJSON:</strong>https://github.com/arisk492/GEOG-370/blob/main/HW7/Continental_US_States.geojson</p>
-<p><strong>Data Source:<strong>https://www.eia.gov/environment/emissions/state/</p>
-<a href="./Energy_Related_CO2_Emissions_by_State"><p><strong>Clean CSV</strong></p></a>
+<a href="https://github.com/arisk492/GEOG-370/blob/main/HW7/Continental_US_States.geojson">GeoJSON</a>
+<a href="https://www.eia.gov/environment/emissions/state/">Data Source</a>
+<a href="./Energy_Related_CO2_Emissions_by_State">Clean CSV</a>
 </body>
 </html>
