--- a/HW7/US_Energy_CO2_Emissions.html
+++ b/HW7/US_Energy_CO2_Emissions.html
@@ -32,7 +32,7 @@ From the choropleths it seems that central U.S. states have seen in increase in 
 <h3>Data</h3>
 <a href="https://github.com/arisk492/GEOG-370/blob/main/HW7/Continental_US_States.geojson">GeoJSON</a><br>
 <a href="https://www.eia.gov/environment/emissions/state/">Data Source</a><br>
-<a href="./Energy_Related_CO2_Emissions_by_State.csv">Clean CSV</a>
+<a href="https://github.com/arisk492/GEOG-370/blob/main/HW7/Energy_Related_CO2_Emissions_by_State.csv">Clean CSV</a>
 
 </body>
 </html>
