--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <a href="./HW5/Pittsboro_1965_Tile.html">Homework 5 - Pittsboro 1965 Tile</a> <br>
   <a href="./HW6/Texas_Grandparents_Choropleth.html">Homework 6.1 - Census Data Choropleth</a> <br>
   <a href="./HW6/Part2_Ratio_Chorpleths.html">Homework 6.2 - Census Data Ratios and Classifications</a> <br>
-  <a href="./HW7/US_Energy_CO2_Emissions.html">Homework 7 - Choropleth</a>
+  <a href="./HW7/US_Energy_CO2_Emissions.html">Homework 7 - Choropleth</a> <br>
+  <a href="./HW8/Something.html">Homework 8 - Geoprocessing Analysis</a>
 </body>
 </html>
