--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <a href="./HW6/Texas_Grandparents_Choropleth.html">Homework 6.1 - Census Data Choropleth</a> <br>
   <a href="./HW6/Part2_Ratio_Chorpleths.html">Homework 6.2 - Census Data Ratios and Classifications</a> <br>
   <a href="./HW7/US_Energy_CO2_Emissions.html">Homework 7 - Choropleth</a> <br>
-  <a href="./HW8/Something.html">Homework 8 - Geoprocessing Analysis</a>
+  <a href="./HW8/Whale_Habitat.html">Homework 8 - Geoprocessing Analysis</a>
 </body>
 </html>
