--- a/HW8/Whale_Habitat.html
+++ b/HW8/Whale_Habitat.html
@@ -23,7 +23,7 @@
     This is the link to my <a href="./Shipping_Fairways_Dissolved.geojson">dissolved shipping fairways layer</a>.
 Then, I used the difference tool to subtract the combined area of the shipping fairways from the critical whale habitat areas. 
 This resulted in the <a href="./Unobstructed Foraging Area.geojson">unobstructed northeastern foraging area layer</a>, which also still includes the data from the southeastern calving area. 
-The datasets I created are both in EPSG 102008, which what I used for the map</p>
+The datasets I created are both in EPSG 102008, which is what I used for the map.</p>
 <br>
 
 <h3>Fraction of North Atlantic Right Whale Foraging Area Unobstructed by Shipping Fairways</h3>
